--- a/Project01_ResponsePage/response.html
+++ b/Project01_ResponsePage/response.html
@@ -205,7 +205,7 @@
             if (document.getElementById('name').validity.valid && document.getElementById('surname').validity.valid && document.getElementById('mail').validity.valid && document.getElementById('number').validity.valid) {
                 return true;
             }
-            return true;
+            return false;
         }
 
     </script>
