second page table created

--- a/Project02_SingleGamePage/index.html
+++ b/Project02_SingleGamePage/index.html
@@ -96,7 +96,41 @@
 
     </div>
 
-    <div class="pageTwo" style="display: none;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, in quia facere placeat sapiente odit expedita! Libero cupiditate quia qui ut eos odio, sapiente vitae necessitatibus, omnis, corrupti repellendus non?</div>
+    <div class="pageTwo" style="display: none;">
+        <table class="table">
+            <thead>
+                <tr>
+                    <th id="laps">Laps</th>
+                    <th id="player1">Player1</th>
+                    <th id="player2">Player2</th>
+                    <th id="player3">Player3</th>
+                    <th id="player4">Player4</th>
+                    <th id="checked">Checked</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th scope="row">1</th>
+                    <td>Mark</td>
+                    <td>Otto</td>
+                    <td>@mdo</td>
+                </tr>
+                <tr>
+                    <th scope="row">2</th>
+                    <td>Jacob</td>
+                    <td>Thornton</td>
+                    <td>@fat</td>
+                </tr>
+                <tr>
+                    <th scope="row">3</th>
+                    <td colspan="2">Larry the Bird</td>
+                    <td>@twitter</td>
+                </tr>
+            </tbody>
+        </table>
+
+
+    </div>
 
 
 
