--- a/Project02_SingleGamePage/index.html
+++ b/Project02_SingleGamePage/index.html
@@ -80,6 +80,7 @@
                 <label class="input-group-text" for="inputGroupSelect01">Number of Laps</label>
                 <select class="form-select" id="inputGroupSelect01">
                     <option selected>Choose...</option>
+                    <option value="2">2</option>
                     <option value="7">7</option>
                     <option value="9">9</option>
                     <option value="11">11</option>
@@ -110,6 +111,16 @@
             <tbody id="tableTbody">
 
             </tbody>
+            <tfoot>
+                <tr>
+                    <td id="footerSum">SUM</td>
+                    <td id="footerSumUserOne">0</td>
+                    <td id="footerSumUserTwo">0</td>
+                    <td id="footerSumUserThree">0</td>
+                    <td id="footerSumUserFour">0</td>
+                    <td><button class="btn btn-info">Clear</button></td>
+                </tr>
+            </tfoot>
         </table>
 
         <div id="result">
@@ -233,7 +244,6 @@
                         $("#userTwoTableInput-" + (i + 1)).prop("disabled", true);
                         $("#userThreeTableInput-" + (i + 1)).prop("disabled", true);
                         $("#userFourTableInput-" + (i + 1)).prop("disabled", true);
-
                     }
                 }).change();
             }
@@ -244,6 +254,8 @@
             userTwoPointArray.push(userTwoPoint);
             userThreePointArray.push(userThreePoint);
             userFourPointArray.push(userFourPoint);
+
+            writeFooterSum(indexes);
 
             console.log("numberOfLaps + " + numberOfLaps + " indexes +" + indexes);
 
@@ -307,6 +319,54 @@
 
                 writeResult(minVal, minName, maxVal, maxName);
             }
+        }
+
+        function writeFooterSum(tail) {
+            let sumUserOne = 0, sumUserTwo = 0, sumUserThree = 0, sumUserFour = 0;
+
+            for (let i = 0; i < tail; i++) {
+                sumUserOne += parseInt(userOnePointArray[i]);
+                sumUserTwo += parseInt(userTwoPointArray[i]);
+                sumUserThree += parseInt(userThreePointArray[i]);
+                sumUserFour += parseInt(userFourPointArray[i]);
+            }
+            let userBGarray = [sumUserOne, sumUserTwo, sumUserThree, sumUserFour];
+
+            userBGarray.sort((a,b) => a - b);
+            let colorArray = ["green", "yellow","orange","red"]; 
+            
+            for (let i = 0; i < userBGarray.length; i++) {
+                if(sumUserOne == userBGarray[i]){
+                    $("#footerSumUserOne").text(colorArray[i] + " - " + sumUserOne);
+                    $("#footerSumUserOne").css("background-color",colorArray[i]);
+                }
+                if(sumUserTwo == userBGarray[i]){
+                    $("#footerSumUserTwo").text(colorArray[i]+ " - " + sumUserTwo);
+                    $("#footerSumUserTwo").css("background-color",colorArray[i]);
+
+                }
+                if(sumUserThree == userBGarray[i]){
+                    $("#footerSumUserThree").text(colorArray[i]+ " - " + sumUserThree);
+                    $("#footerSumUserThree").css("background-color",colorArray[i]);
+
+                }
+                if(sumUserFour == userBGarray[i]){
+                    $("#footerSumUserFour").text(colorArray[i]+ " - " + sumUserFour);
+                    $("#footerSumUserFour").css("background-color",colorArray[i]);
+
+                }
+                
+            }
+
+
+            console.log(userBGarray);
+            // $("#footerSumUserOne").text(sumUserOne);
+            // $("#footerSumUserTwo").text(sumUserTwo);
+            // $("#footerSumUserThree").text(sumUserThree);
+            // $("#footerSumUserFour").text(sumUserFour);
+
+
+
         }
 
         function writeResult(winnerPoint, winerName, loserPoint, loserName) {
