--- a/Project02_SingleGamePage/index.html
+++ b/Project02_SingleGamePage/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
+    <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"
@@ -26,138 +26,154 @@
 </head>
 
 <body>
-    <div class="pageOne">
 
-        <div class="user_1">
+    <div id="allPages">
+        <div class="pageOne">
 
-            <div class="input-group mb-3">
-                <div class="input-group-text">
-                    <input id="chbx1" class="form-check-input mt-0" type="checkbox"
-                        aria-label="Checkbox for following text input">
+            <div class="user_1">
+
+                <img id="userOneImage" src="#" alt="user one image" width="100" height="100">
+
+                <div class="input-group mb-3">
+                    <div class="input-group-text">
+                        <input id="chbx1" class="form-check-input mt-0" type="checkbox"
+                            aria-label="Checkbox for following text input">
+                    </div>
+                    <input id="userOneInput" type="text" class="form-control" aria-label="Text input with checkbox">
+                    <input type="file" class="form-control" id="inputGroupFile01">
                 </div>
-                <input id="userOneInput" type="text" class="form-control" aria-label="Text input with checkbox">
+
             </div>
 
-        </div>
-
-        <div class="user_2">
-
-            <div class="input-group mb-3">
-                <div class="input-group-text">
-                    <input id="chbx2" class="form-check-input mt-0" type="checkbox"
-                        aria-label="Checkbox for following text input">
+            <div class="user_2">
+                <img id="userSecondImage" src="#" alt="user two image" width="100" height="100">
+                <div class="input-group mb-3">
+                    <div class="input-group-text">
+                        <input id="chbx2" class="form-check-input mt-0" type="checkbox"
+                            aria-label="Checkbox for following text input">
+                    </div>
+                    <input id="userTwoInput" type="text" class="form-control" aria-label="Text input with checkbox">
+                    <input type="file" class="form-control" id="inputGroupFile02">
                 </div>
-                <input id="userTwoInput" type="text" class="form-control" aria-label="Text input with checkbox">
+
             </div>
+            <div class="user_3">
 
-        </div>
-        <div class="user_3">
+                <img id="userThirdImage" src="#" alt="user three image" width="100" height="100">
 
-            <div class="input-group mb-3">
-                <div class="input-group-text">
-                    <input id="chbx3" class="form-check-input mt-0" type="checkbox"
-                        aria-label="Checkbox for following text input">
+                <div class="input-group mb-3">
+                    <div class="input-group-text">
+                        <input id="chbx3" class="form-check-input mt-0" type="checkbox"
+                            aria-label="Checkbox for following text input">
+                    </div>
+                    <input id="userThreeInput" type="text" class="form-control" aria-label="Text input with checkbox">
+                    <input type="file" class="form-control" id="inputGroupFile03">
+
+
                 </div>
-                <input id="userThreeInput" type="text" class="form-control" aria-label="Text input with checkbox">
+
             </div>
+            <div class="user_4">
 
-        </div>
-        <div class="user_4">
+                <img id="userFourthImage" src="#" alt="user four image" width="100" height="100">
 
-            <div class="input-group mb-3">
-                <div class="input-group-text">
-                    <input id="chbx4" class="form-check-input mt-0" type="checkbox"
-                        aria-label="Checkbox for following text input">
+                <div class="input-group mb-3">
+                    <div class="input-group-text">
+                        <input id="chbx4" class="form-check-input mt-0" type="checkbox"
+                            aria-label="Checkbox for following text input">
+                    </div>
+                    <input id="userFourInput" type="text" class="form-control" aria-label="Text input with checkbox">
+                    <input type="file" class="form-control" id="inputGroupFile04">
                 </div>
-                <input id="userFourInput" type="text" class="form-control" aria-label="Text input with checkbox">
+
+            </div>
+
+            <div class="numberOfLap">
+
+                <div class="input-group mb-3">
+                    <label class="input-group-text" for="inputGroupSelect01">Number of Laps</label>
+                    <select class="form-select" id="inputGroupSelect01">
+                        <option selected>Choose...</option>
+                        <option value="2">2</option>
+                        <option value="7">7</option>
+                        <option value="9">9</option>
+                        <option value="11">11</option>
+                        <option value="13">13</option>
+                    </select>
+                </div>
+
+            </div>
+
+            <div class="save">
+                <button class="btn btn-primary" type="submit" onclick="saveBtn()">Save</button>
             </div>
 
         </div>
 
-        <div class="numberOfLap">
+        <div class="pageTwo" style="display: none;">
+            <table class="table caption-top table-hover">
+                <thead class="table-dark">
+                    <tr>
+                        <th id="laps">Laps</th>
+                        <th id="player1">Player1</th>
+                        <th id="player2">Player2</th>
+                        <th id="player3">Player3</th>
+                        <th id="player4">Player4</th>
+                        <th id="checked">Checked</th>
+                    </tr>
+                </thead>
+                <tbody id="tableTbody">
 
-            <div class="input-group mb-3">
-                <label class="input-group-text" for="inputGroupSelect01">Number of Laps</label>
-                <select class="form-select" id="inputGroupSelect01">
-                    <option selected>Choose...</option>
-                    <option value="2">2</option>
-                    <option value="7">7</option>
-                    <option value="9">9</option>
-                    <option value="11">11</option>
-                    <option value="13">13</option>
-                </select>
+                </tbody>
+                <tfoot>
+                    <tr>
+                        <td id="footerSum">SUM</td>
+                        <td id="footerSumUserOne">0</td>
+                        <td id="footerSumUserTwo">0</td>
+                        <td id="footerSumUserThree">0</td>
+                        <td id="footerSumUserFour">0</td>
+                        <td><button class="btn btn-info">Clear</button></td>
+                    </tr>
+                </tfoot>
+            </table>
+
+            <div id="result">
+                <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
+                    <symbol id="check-circle-fill" fill="currentColor" viewBox="0 0 16 16">
+                        <path
+                            d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z" />
+                    </symbol>
+                    <symbol id="info-fill" fill="currentColor" viewBox="0 0 16 16">
+                        <path
+                            d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z" />
+                    </symbol>
+                    <symbol id="exclamation-triangle-fill" fill="currentColor" viewBox="0 0 16 16">
+                        <path
+                            d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
+                    </symbol>
+                </svg>
+
+                <div id="winnerDiv" class="alert alert-success d-flex align-items-center" role="alert">
+                    <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Success:">
+                        <use xlink:href="#check-circle-fill" />
+                    </svg>
+                    <div>
+                        <p id="winner"></p>
+                    </div>
+                </div>
+
+                <div id="loserDiv" class="alert alert-danger d-flex align-items-center" role="alert">
+                    <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Danger:">
+                        <use xlink:href="#exclamation-triangle-fill" />
+                    </svg>
+                    <div>
+                        <p id="loser"></p>
+                    </div>
+                </div>
             </div>
-
         </div>
-
-        <div class="save">
-            <button class="btn btn-primary" type="submit" onclick="saveBtn()">Save</button>
-        </div>
-
     </div>
 
-    <div class="pageTwo" style="display: none;">
-        <table class="table">
-            <thead>
-                <tr>
-                    <th id="laps">Laps</th>
-                    <th id="player1">Player1</th>
-                    <th id="player2">Player2</th>
-                    <th id="player3">Player3</th>
-                    <th id="player4">Player4</th>
-                    <th id="checked">Checked</th>
-                </tr>
-            </thead>
-            <tbody id="tableTbody">
-
-            </tbody>
-            <tfoot>
-                <tr>
-                    <td id="footerSum">SUM</td>
-                    <td id="footerSumUserOne">0</td>
-                    <td id="footerSumUserTwo">0</td>
-                    <td id="footerSumUserThree">0</td>
-                    <td id="footerSumUserFour">0</td>
-                    <td><button class="btn btn-info">Clear</button></td>
-                </tr>
-            </tfoot>
-        </table>
-
-        <div id="result">
-            <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
-                <symbol id="check-circle-fill" fill="currentColor" viewBox="0 0 16 16">
-                    <path
-                        d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z" />
-                </symbol>
-                <symbol id="info-fill" fill="currentColor" viewBox="0 0 16 16">
-                    <path
-                        d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z" />
-                </symbol>
-                <symbol id="exclamation-triangle-fill" fill="currentColor" viewBox="0 0 16 16">
-                    <path
-                        d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
-                </symbol>
-            </svg>
-
-            <div id="winnerDiv" class="alert alert-success d-flex align-items-center" role="alert">
-                <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Success:">
-                    <use xlink:href="#check-circle-fill" />
-                </svg>
-                <div>
-                    <p id="winner"></p>
-                </div>
-            </div>
-
-            <div id="loserDiv" class="alert alert-danger d-flex align-items-center" role="alert">
-                <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Danger:">
-                    <use xlink:href="#exclamation-triangle-fill" />
-                </svg>
-                <div>
-                    <p id="loser"></p>
-                </div>
-            </div>
-        </div>
-    </div>
 
 
 
@@ -168,6 +184,15 @@
         var userTwoPointArray = new Array();
         var userThreePointArray = new Array();
         var userFourPointArray = new Array();
+
+        window.addEventListener('load', function () {
+            document.querySelector('input[type="file"]').addEventListener('change', function () {
+                if (this.files && this.files[0]) {
+                    var img = document.querySelector('img');
+                    img.src = URL.createObjectURL(this.files[0]);
+                }
+            });
+        });
 
         function saveBtn() {
 
@@ -332,30 +357,34 @@
             }
             let userBGarray = [sumUserOne, sumUserTwo, sumUserThree, sumUserFour];
 
-            userBGarray.sort((a,b) => a - b);
-            let colorArray = ["green", "yellow","orange","red"]; 
-            
+            userBGarray.sort((a, b) => a - b);
+            let colorArray = ["#40ff00", " #ccff66", " #ff9933", "#ff3300"];
+
             for (let i = 0; i < userBGarray.length; i++) {
-                if(sumUserOne == userBGarray[i]){
-                    $("#footerSumUserOne").text(colorArray[i] + " - " + sumUserOne);
-                    $("#footerSumUserOne").css("background-color",colorArray[i]);
+                if (sumUserOne == userBGarray[i]) {
+                    $("#footerSumUserOne").text(sumUserOne);
+                    $("#footerSumUserOne").css("background-color", colorArray[i]);
+                    $("#player1").css("background-color", colorArray[i]);
                 }
-                if(sumUserTwo == userBGarray[i]){
-                    $("#footerSumUserTwo").text(colorArray[i]+ " - " + sumUserTwo);
-                    $("#footerSumUserTwo").css("background-color",colorArray[i]);
+                if (sumUserTwo == userBGarray[i]) {
+                    $("#footerSumUserTwo").text(sumUserTwo);
+                    $("#footerSumUserTwo").css("background-color", colorArray[i]);
+                    $("#player2").css("background-color", colorArray[i]);
 
                 }
-                if(sumUserThree == userBGarray[i]){
-                    $("#footerSumUserThree").text(colorArray[i]+ " - " + sumUserThree);
-                    $("#footerSumUserThree").css("background-color",colorArray[i]);
+                if (sumUserThree == userBGarray[i]) {
+                    $("#footerSumUserThree").text(sumUserThree);
+                    $("#footerSumUserThree").css("background-color", colorArray[i]);
+                    $("#player3").css("background-color", colorArray[i]);
 
                 }
-                if(sumUserFour == userBGarray[i]){
-                    $("#footerSumUserFour").text(colorArray[i]+ " - " + sumUserFour);
-                    $("#footerSumUserFour").css("background-color",colorArray[i]);
+                if (sumUserFour == userBGarray[i]) {
+                    $("#footerSumUserFour").text(sumUserFour);
+                    $("#footerSumUserFour").css("background-color", colorArray[i]);
+                    $("#player4").css("background-color", colorArray[i]);
 
                 }
-                
+
             }
 
 
